# hollis

./: LICENSE  README.md  config.properties  default.nix  install.sh
data/hollis/: meta.json
data/hollis/_APPS/hollis/src/html/hollis/: index.html
data/hollis/cont/rols/____/____/: controls
data/hollis/task/list/s___/____/: tasklists
hollis/: Cargo.toml
runtime/hollis/: app.properties  botd.properties
